// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lodash should disable the lodash plugin if options.lodash is disabled 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`lodash should pass any options to the lodash plugin 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
          "recompose",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`modules should set modules to false by default if BABEL_ENV is es 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`modules should set modules to false if options.modules is disabled 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should enable add-module-exports by default 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should enable add-module-exports if options.modules is commonjs 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should enable add-module-exports if options.modules is commonjs 2`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should not enable add-module-exports if options.modules is not commonjs 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should respect options.namedDefaultExport 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should respect options.namedDefaultExport 2`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should respect options.namedDefaultExport 3`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`namedDefaultExport & babel-plugin-add-module-exports should respect options.namedDefaultExport 4`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`react should enable react optimizations if options.env is production 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-display-name/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-remove-prop-types/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-constant-elements/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-inline-elements/lib/index.js",
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`react should enable react plugins if options.react is enabled and enable development goodies 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-syntax-jsx/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-display-name/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx-source/lib/index.js",
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-react-jsx-self/lib/index.js",
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`targets should allow overriding options.targets with an object 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "node": "current",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`targets should return a config for browsers if options.targets is set to browsers 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`targets should return a config for node if options.targets is set to node 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;

exports[`targets should return a default config that target browsers and node 1`] = `
Object {
  "plugins": Array [
    "<PROJECT_ROOT>/node_modules/babel-plugin-transform-class-properties/lib/index.js",
    Array [
      "<PROJECT_ROOT>/node_modules/babel-plugin-transform-object-rest-spread/lib/index.js",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      Array [
        "<PROJECT_ROOT>/node_modules/babel-plugin-lodash/lib/index.js",
      ],
      Object {
        "id": Array [
          "lodash",
          "lodash-es",
          "lodash-compat",
          "lodash/fp",
        ],
      },
    ],
    "babel-plugin-add-module-exports",
  ],
  "presets": Array [
    Array [
      "<PROJECT_ROOT>/node_modules/babel-preset-env/lib/index.js",
      Object {
        "debug": false,
        "loose": true,
        "modules": "commonjs",
        "targets": Object {
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "node": "8.9",
        },
        "useBuiltIns": true,
      },
    ],
  ],
}
`;
